--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-i18n": "^9.1.9",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
