--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "ant-design-vue": "^1.7.8",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "echarts": "^5.3.2",
+    "highcharts": "^10.0.0",
+    "highcharts-vue": "^1.4.0",
     "vue": "^2.6.11",
     "vue-i18n": "^9.1.9",
     "vue-router": "^3.2.0",
